Fix image stretching

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ footer {
 .top-content,
 .info-content {
     display: flex;
+    align-items: center;
 }
 
 .top-content,
